# Achievement-Injector

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  achievementwidget.swf  arrowcount.swf  populate.py  vcpkg-configuration.json  vcpkg.json
AchievementsData/: SkyrimSE.json
Flash src/: achievementwidget.as  achievementwidget.fla
Skyrim/Data/: AchievementInjector.esp
Skyrim/Data/AchievementsData/: .gitignore  DV01VampireClanWar.json  Dawnguard.json  Dragonborn.json  Hearthfire.json  SkyrimSE.json  TheSinisterSeven.json
Skyrim/Data/Scripts/: AchievementInjectorMcmScript.pex  AchievementInjectorScripts.pex
Skyrim/Data/interface/: AchievementMenu-Untarnished.swf  AchievementMenu-Untarnished219.swf  AchievementMenu-untarnished-219.swf  AchievementMenu-untarnished-329.swf  AchievementsMenuInjector.swf  UnlockedAchievements_FLANN.json  achievementmenu-219.swf  achievementmenu-329.swf  achievementmenu.swf  achievementwidget-219.swf  achievementwidget-329.swf  achievementwidget-untarnished.swf  achievementwidget.swf
Skyrim/MCM/: config.json  settings.ini
cmake/: Version.h.in  headerlist.cmake  sourcelist.cmake  version.rc.in
flash/: .gitignore  AchievementCard.as  AchievementGroup.as  AchievementGroups.as  AchievementList.as  AchievementMenu-Untarnished.fla  AchievementMenu.as  AchievementMenu.fla  AchievementUtils.as  AchievementsMenuInjector.as  AchievementsMenuInjector.fla
flash/HUDWidgets/: AchievementMenu.as  AchievementWidget.as  achievementmenu.fla  achievementwidget 21-9.fla  achievementwidget.fla
include/: ConsoleUtilSSE.h
src/: Achievement.cpp  Achievement.h  AchievementFile.h  AchievementGroup.h  AchievementManager.cpp  AchievementManager.h  AchievementMenu.cpp  AchievementMenu.h  AchievementWidget.cpp  AchievementWidget.h  CommonFunctions.cpp  CommonFunctions.h  Condition.cpp  Condition.h  ConditionsJoinType.h  CustomRE.cpp  CustomRE.h  EventHandler.h  EventProcessor.cpp  EventProcessor.h  GameEventHandler.cpp  Interface.h  KeyMapping.h  LocalizationManager.cpp  LocalizationManager.h  MessageBox.h  Papyrus.cpp  Papyrus.h  Runnable.cpp  Runnable.h  Scaleform.h  Serializer.cpp  Serializer.h  Settings.cpp  Singleton.h  Sync.cpp  Sync.h  UIManager.cpp  UIManager.h  Utility.cpp  (+5 more)
src/Conditions/: Condition.cpp  Condition.h
src/Conditions/AchievementUnlocked/: AchievementUnlockedCondition.cpp  AchievementUnlockedCondition.h
src/Conditions/ActorDeath/: ActorDeathCondition.cpp  ActorDeathCondition.h
src/Conditions/BaseActorDeath/: BaseActorDeathCondition.cpp  BaseActorDeathCondition.h
src/Conditions/BookRead/: BookReadCondition.cpp  BookReadCondition.h
src/Conditions/DragonSoulAbsorbed/: DragonSoulsAbsorbedCondition.cpp  DragonSoulsAbsorbedCondition.h
src/Conditions/DungeonCleared/: DungeonClearedCondition.cpp  DungeonClearedCondition.h
src/Conditions/GlobalVariableState/: GlobalVariableStateCondition.cpp  GlobalVariableStateCondition.h
src/Conditions/ItemCrafted/: ItemCraftedCondition.cpp  ItemCraftedCondition.h
src/Conditions/ItemInInventory/: ItemInInventoryCondition.cpp  ItemInInventoryCondition.h
src/Conditions/LocationDiscovery/: LocationDiscoveryCondition.cpp  LocationDiscoveryCondition.h
src/Conditions/ObjectState/: ObjectStateCondition.cpp  ObjectStateCondition.h
(+136 files in other folders)
